--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -11,7 +11,7 @@ html {
 /* Write your solution here */
 @media only screen and (max-width: 100px){
   #ostrich{
-    top:100px;} 
+    bottom:100px;} 
 }
 
 
