--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -11,7 +11,8 @@ html {
 /* Write your solution here */
 @media only screen and (max-width: 100px){
   #ostrich{
-    bottom: 7000px;} 
+    
+    position: 7000px;} 
 }
 
 
