--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -9,10 +9,9 @@ html {
 }
 
 /* Write your solution here */
-@media only screen and (max-width: 100px){
+@media only screen and (max-width: 1000px){
   #ostrich{
-    
-    float: left;} 
+    top: -50px;} 
 }
 
 
