--- a/css/monkey.css
+++ b/css/monkey.css
@@ -11,7 +11,8 @@ html {
 /* Write your solution here */
 @media only screen and (min-width: 406px) and (max-width: 1170px) {
   #monkey{
-    right: 5000px;
+    right: 0;
+    top: 0;
   }
 }
 
